# rocSPARSE

./: .gitignore  .readthedocs.yaml  1  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  Jenkinsfile.backup  LICENSE.md  README.md  custom.properties  header.hpp.in  install.sh  rmake.py  rocsparse_spmm.cpp  rtest.py  rtest.xml  suppr.txt  toolchain-linux.cmake  toolchain-windows.cmake
benchmark/: CMakeLists.txt  benchmark_csrmv_mtx.cpp  benchmark_spmv.cpp  benchmark_utils.h
clients/: CMakeLists.txt
clients/benchmarks/: CMakeLists.txt  client.cpp  program_options.hpp  rocsparse_arguments_config.cpp  rocsparse_arguments_config.hpp  rocsparse_bench.cpp  rocsparse_bench.hpp  rocsparse_bench_app.cpp  rocsparse_bench_app.hpp  rocsparse_bench_cmdlines.cpp  rocsparse_bench_cmdlines.hpp  rocsparse_routine.cpp  rocsparse_routine.hpp
clients/common/: arg_check.cpp  rocsparse_check.cpp  rocsparse_clients_envariables.cpp  rocsparse_clients_matrices_dir.cpp  rocsparse_enum.cpp  rocsparse_enum_from_name.cpp  rocsparse_enum_name.cpp  rocsparse_exporter_ascii.cpp  rocsparse_exporter_ascii.hpp  rocsparse_exporter_format_t.cpp  rocsparse_exporter_matrixmarket.cpp  rocsparse_exporter_matrixmarket.hpp  rocsparse_exporter_rocalution.cpp  rocsparse_exporter_rocalution.hpp  rocsparse_exporter_rocsparseio.cpp  rocsparse_exporter_rocsparseio.hpp  rocsparse_gentest.py  rocsparse_host.cpp  rocsparse_importer.cpp  rocsparse_importer_format_t.cpp  rocsparse_importer_impls.hpp  rocsparse_importer_matrixmarket.cpp  rocsparse_importer_matrixmarket.hpp  rocsparse_importer_mlbsr.cpp  rocsparse_importer_mlbsr.hpp  rocsparse_importer_mlcsr.cpp  rocsparse_importer_mlcsr.hpp  rocsparse_importer_rocalution.cpp  rocsparse_importer_rocalution.hpp  rocsparse_importer_rocsparseio.cpp  rocsparse_importer_rocsparseio.hpp  rocsparse_init.cpp  rocsparse_matrix_factory.cpp  rocsparse_matrix_factory_file.cpp  rocsparse_matrix_factory_laplace2d.cpp  rocsparse_matrix_factory_laplace3d.cpp  rocsparse_matrix_factory_pentadiagonal.cpp  rocsparse_matrix_factory_random.cpp  rocsparse_matrix_factory_tridiagonal.cpp  rocsparse_matrix_factory_zero.cpp  (+13 more)
clients/include/: arg_check.hpp  auto_testing_bad_arg.hpp  auto_testing_bad_arg_get_status.hpp  auto_testing_bad_arg_set_invalid.hpp  display.hpp  flops.hpp  gbyte.hpp  rocsparse.hpp  rocsparse_allocator.hpp  rocsparse_arguments.hpp  rocsparse_check.hpp  rocsparse_clients_envariables.hpp  rocsparse_clients_matrices_dir.hpp  rocsparse_common.yaml  rocsparse_data.hpp  rocsparse_datatype2string.hpp  rocsparse_enum.hpp  rocsparse_enum_name.hpp  rocsparse_exporter.hpp  rocsparse_exporter_ascii.hpp  rocsparse_exporter_format_t.hpp  rocsparse_exporter_rocalution.hpp  rocsparse_graph.hpp  rocsparse_host.hpp  rocsparse_import.hpp  rocsparse_importer.hpp  rocsparse_importer_format_t.hpp  rocsparse_importer_matrixmarket.hpp  rocsparse_importer_rocalution.hpp  rocsparse_importer_rocsparseio.hpp  rocsparse_init.hpp  rocsparse_load.hpp  rocsparse_math.hpp  rocsparse_matrix.hpp  rocsparse_matrix_coo.hpp  rocsparse_matrix_coo_aos.hpp  rocsparse_matrix_csx.hpp  rocsparse_matrix_dense.hpp  rocsparse_matrix_ell.hpp  rocsparse_matrix_factory.hpp  (+164 more)
clients/samples/: CMakeLists.txt  example_axpyi.cpp  example_bsrmm.cpp  example_bsrmv.cpp  example_bsrsm.cpp  example_bsrsv.cpp  example_c_headers.c  example_coomv.cpp  example_csrgeam.cpp  example_csrgemm.cpp  example_csritsv.cpp  example_csrmm.cpp  example_csrmv.cpp  example_csrmv_managed.cpp  example_csrsm.cpp  example_csrsv.cpp  example_csrsv_managed.cpp  example_dotci.cpp  example_doti.cpp  example_ellmv.cpp  example_fortran_auxiliary.f90  example_fortran_bsric0.f90  example_fortran_bsrilu0.f90  example_fortran_bsrmm.f90  example_fortran_bsrsv.f90  example_fortran_csric0.f90  example_fortran_csrilu0.f90  example_fortran_csrsm.f90  example_fortran_csrsv.f90  example_fortran_dotci.f90  example_fortran_gemmi.f90  example_fortran_gtsv.f90  example_fortran_roti.f90  example_fortran_spmv.f90  example_gebsrmv.cpp  example_gemmi.cpp  example_gemvi.cpp  example_gpsv.cpp  example_gthr.cpp  example_gthrz.cpp  (+14 more)
clients/testings/: testing.hpp  testing_axpby.cpp  testing_axpyi.cpp  testing_bsr2csr.cpp  testing_bsrgeam.cpp  testing_bsrgemm.cpp  testing_bsric0.cpp  testing_bsrilu0.cpp  testing_bsrmm.cpp  testing_bsrmv.cpp  testing_bsrpad_identity.cpp  testing_bsrpad_value.cpp  testing_bsrsm.cpp  testing_bsrsv.cpp  testing_bsrxmv.cpp  testing_check_matrix_coo.cpp  testing_check_matrix_csc.cpp  testing_check_matrix_csr.cpp  testing_check_matrix_ell.cpp  testing_check_matrix_gebsc.cpp  testing_check_matrix_gebsr.cpp  testing_check_matrix_hyb.cpp  testing_check_spmat.cpp  testing_const_dnmat_descr.cpp  testing_const_dnvec_descr.cpp  testing_const_spmat_descr.cpp  testing_const_spvec_descr.cpp  testing_coo2csr.cpp  testing_coo2dense.cpp  testing_coomv.cpp  testing_coosort.cpp  testing_copy_info.cpp  testing_csc2dense.cpp  testing_cscsort.cpp  testing_csr2bsr.cpp  testing_csr2coo.cpp  testing_csr2csc.cpp  testing_csr2csr_compress.cpp  testing_csr2dense.cpp  testing_csr2ell.cpp  (+90 more)
clients/tests/: CMakeLists.txt  known_bugs.yaml  rocsparse_gtest_main.cpp  rocsparse_test.yaml  rocsparse_test_call.hpp  rocsparse_test_check.hpp  rocsparse_test_config.hpp  rocsparse_test_dispatch.hpp  rocsparse_test_dispatch_enum.hpp  rocsparse_test_enum.hpp  rocsparse_test_functors.hpp  rocsparse_test_main.cpp  rocsparse_test_numeric_types_enum.hpp  rocsparse_test_template.hpp  rocsparse_test_template_traits.hpp  rocsparse_test_traits.hpp  rocsparse_test_utility.hpp  test.hpp  test_axpby.cpp  test_axpby.yaml  test_axpyi.cpp  test_axpyi.yaml  test_bsr2csr.cpp  test_bsr2csr.yaml  test_bsrgeam.cpp  test_bsrgeam.yaml  test_bsrgemm.cpp  test_bsrgemm.yaml  test_bsric0.cpp  test_bsric0.yaml  test_bsrilu0.cpp  test_bsrilu0.yaml  test_bsrmm.cpp  test_bsrmm.yaml  test_bsrmv.cpp  test_bsrmv.yaml  test_bsrpad_identity.cpp  test_bsrpad_identity.yaml  (+238 more)
example/: CMakeLists.txt  rocsparse_handle.cpp
test/: CMakeLists.txt  test_device_apis.cpp  test_rocsparse_csrmv.cpp  test_rocsparse_handle.cpp  test_utils.h
(+181 files in other folders)
